# cv-learn

./: .gitignore  README.md
Vtk01/: CMakeLists.txt  PreLoad.cmake  page001.cpp
Vtk02/: CMakeLists.txt  main.cpp
find_pack/: CMakeLists.txt  PreLoad.cmake  main.cxx
hello/: CMakeLists.txt  main.cxx
new/: CMakeLists.txt  PreLoad.cmake  test.cpp
opencv/: CMakeLists.txt  main.cxx  test.cxx
