cmake_minimum_required(VERSION 3.14)
project(vtk01 LANGUAGES CXX)
set(VTK_DIR "E:/Cplus/ToolKits/VTK/include/vtk-8.2")
find_package(VTK REQUIRED NO_MODULE)
message("VTK_FOUND: ${VTK_FOUND}")
message("VTK_INCLUDE_DIRS: ${VTK_INCLUDE_DIRS}")
message("VTK_LIBRARIES: ${VTK_LIBRARIES}")
include(${VTK_USE_FILE})
link_directories(${VTK_LIBRARY_DIRS})
add_executable(${PROJECT_NAME} page001.cpp)
target_link_libraries(${PROJECT_NAME} ${VTK_LIBRARIES})